--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,20 @@
             font-size: 13px;
         }
 
+        p {
+            color: #ffffff;
+        }
+
+        a:link, a:visited {
+            color: #ffffff;
+            text-decoration: underline;
+        }
+
+        a:hover, a:active {
+            color: #ffffff;
+            text-decoration: none;
+        }
+
         .container {
             width: 512px; 
             margin: 0 auto; 
