--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,7 @@
 
         }
 
-        .oscillator, .filter, .output {
+        .oscillator, .filter, .reverb {
             float: right;
             margin-bottom: 1em;
             margin-left: 1em;
