--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,7 @@ button {
 	height: 33px;
 	padding: 5px;
 	color: rgba(255,255,255,1);
+	font-weight: bold;
 	background: rgba(0,0,0,0.3);
 	-webkit-border-radius: 11px;
 	-moz-border-radius: 11px;
