--- a/css/styles.css
+++ b/css/styles.css
@@ -7,9 +7,7 @@
 html {
     -webkit-text-size-adjust: 100%;
     -ms-text-size-adjust: 100%;
-    -webkit-user-select: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -webkit-touch-callout: none;
 }
 
 body {
@@ -80,6 +78,9 @@ main {
     background: #100e16;
     border-radius: 15px;
     cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -webkit-touch-callout: none;
 }
 
 .off .surface {
@@ -258,13 +259,13 @@ select:focus {
     }
 
     .surface:before {
-        height: 118px;
+        height: 123px;
         width: 246px;
     }
 
     .surface:after {
         height: 246px;
-        width: 118px;
+        width: 123px;
     }
 
     .delay {
