Improve cross browser range input styling

--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,7 @@ canvas {
     height: 44px;
     border-radius: 22px;
     background: #bebebe;
+    border: none;
     background: -webkit-linear-gradient(top, #fdfdfd 0%, #bebebe 100%);
     background: linear-gradient(to bottom, #fdfdfd 0%, #bebebe 100%);
 }
@@ -195,6 +196,11 @@ canvas {
     background: #bebebe;
     border: none;
     background: linear-gradient(to bottom, #fdfdfd 0%, #bebebe 100%);
+}
+
+#delay::-moz-range-track,
+#feedback::-moz-range-track {
+    height: 0;
 }
 
 button {
